[gd_scene load_steps=6 format=3 uid="uid://c5li8uqbcbmiv"]

[ext_resource type="Theme" uid="uid://dq1ugfcjcspsb" path="res://UIThemes/UITheme.tres" id="1_copkk"]
[ext_resource type="Script" path="res://Scripts/UIScripts/SettingsMenu.gd" id="2_r7foj"]
[ext_resource type="Script" path="res://Scripts/UIScripts/AudioSettings.gd" id="3_atlb4"]
[ext_resource type="Script" path="res://Scripts/UIScripts/DisplaySettings.gd" id="3_b4q07"]
[ext_resource type="Script" path="res://Scripts/UIScripts/GraphicsSettings.gd" id="4_vhkq3"]

[node name="SettingsMenu" type="ColorRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_copkk")
color = Color(0, 0, 0, 0.43)
script = ExtResource("2_r7foj")

[node name="MenuPanel" type="ColorRect" parent="."]
custom_minimum_size = Vector2(700, 500)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.3
anchor_right = 0.8
anchor_bottom = 0.7
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TabContainer" type="TabContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1

[node name="Display" type="MarginContainer" parent="MenuPanel/TabContainer"]
layout_mode = 2
script = ExtResource("3_b4q07")

[node name="MarginContainer" type="MarginContainer" parent="MenuPanel/TabContainer/Display"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel/TabContainer/Display/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MenuPanel/TabContainer/Display/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MenuPanel/TabContainer/Display/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MenuPanel/TabContainer/Display/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
text = "Mode"

[node name="Control2" type="Control" parent="MenuPanel/TabContainer/Display/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.0

[node name="DisplayModeOption" type="OptionButton" parent="MenuPanel/TabContainer/Display/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.65
alignment = 1
item_count = 4
selected = 1
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Maximized Window"
popup/item_1/id = 1
popup/item_2/text = "Borderless Window"
popup/item_2/id = 2
popup/item_3/text = "Fullscreen"
popup/item_3/id = 3

[node name="MarginContainer2" type="MarginContainer" parent="MenuPanel/TabContainer/Display/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MenuPanel/TabContainer/Display/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuPanel/TabContainer/Display/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Resolution"
horizontal_alignment = 1

[node name="Control" type="Control" parent="MenuPanel/TabContainer/Display/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.0

[node name="ResolutionOption" type="OptionButton" parent="MenuPanel/TabContainer/Display/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.65
alignment = 1
item_count = 4
selected = 1
popup/item_0/text = "1280 x 720"
popup/item_0/id = 0
popup/item_1/text = "1920 x 1080"
popup/item_1/id = 1
popup/item_2/text = "2560 x 1440"
popup/item_2/id = 2
popup/item_3/text = "3840 x 2160"
popup/item_3/id = 3

[node name="MarginContainer3" type="MarginContainer" parent="MenuPanel/TabContainer/Display/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MenuPanel/TabContainer/Display/MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="Label3" type="Label" parent="MenuPanel/TabContainer/Display/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "VSync         "

[node name="Control" type="Control" parent="MenuPanel/TabContainer/Display/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0

[node name="VsincOption" type="OptionButton" parent="MenuPanel/TabContainer/Display/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.65
alignment = 1
item_count = 4
selected = 0
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1
popup/item_2/text = "Adaptative"
popup/item_2/id = 2
popup/item_3/text = "Mailbox"
popup/item_3/id = 3

[node name="KeepChangesPanel" type="ColorRect" parent="MenuPanel/TabContainer/Display"]
visible = false
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="KeepChanges" type="Button" parent="MenuPanel/TabContainer/Display/KeepChangesPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -31.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
text = "Keep Changes"

[node name="KeepChangesLabel" type="Label" parent="MenuPanel/TabContainer/Display/KeepChangesPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.5
offset_top = -58.0
offset_right = 28.5
grow_horizontal = 2
grow_vertical = 0
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Graphics" type="MarginContainer" parent="MenuPanel/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("4_vhkq3")

[node name="MarginContainer" type="MarginContainer" parent="MenuPanel/TabContainer/Graphics"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel/TabContainer/Graphics/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MenuPanel/TabContainer/Graphics/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MenuPanel/TabContainer/Graphics/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MenuPanel/TabContainer/Graphics/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
text = "Anti Aliasing"

[node name="Control2" type="Control" parent="MenuPanel/TabContainer/Graphics/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.0

[node name="MSAAOption" type="OptionButton" parent="MenuPanel/TabContainer/Graphics/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.65
alignment = 1
item_count = 5
selected = 1
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "FXAA"
popup/item_1/id = 1
popup/item_2/text = "MSAA 2X"
popup/item_2/id = 2
popup/item_3/text = "MSAA 4X"
popup/item_3/id = 3
popup/item_4/text = "MSAA 8X"
popup/item_4/id = 4

[node name="MarginContainer2" type="MarginContainer" parent="MenuPanel/TabContainer/Graphics/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MenuPanel/TabContainer/Graphics/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="Label3" type="Label" parent="MenuPanel/TabContainer/Graphics/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Shadows"

[node name="Control" type="Control" parent="MenuPanel/TabContainer/Graphics/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0

[node name="ShadowsOption" type="OptionButton" parent="MenuPanel/TabContainer/Graphics/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.65
alignment = 1
item_count = 4
selected = 0
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Low"
popup/item_1/id = 1
popup/item_2/text = "Medium"
popup/item_2/id = 2
popup/item_3/text = "High"
popup/item_3/id = 3

[node name="Audio" type="MarginContainer" parent="MenuPanel/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("3_atlb4")

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel/TabContainer/Audio"]
layout_mode = 2

[node name="MasterMargin" type="MarginContainer" parent="MenuPanel/TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel/TabContainer/Audio/VBoxContainer/MasterMargin"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuPanel/TabContainer/Audio/VBoxContainer/MasterMargin/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Master Volume"

[node name="HBoxContainer2" type="HBoxContainer" parent="MenuPanel/TabContainer/Audio/VBoxContainer/MasterMargin/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MenuPanel/TabContainer/Audio/VBoxContainer/MasterMargin/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="MasterSlider" type="HSlider" parent="MenuPanel/TabContainer/Audio/VBoxContainer/MasterMargin/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -80.0
max_value = 0.0

[node name="MusicMargin" type="MarginContainer" parent="MenuPanel/TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel/TabContainer/Audio/VBoxContainer/MusicMargin"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuPanel/TabContainer/Audio/VBoxContainer/MusicMargin/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Music Volume"

[node name="HBoxContainer2" type="HBoxContainer" parent="MenuPanel/TabContainer/Audio/VBoxContainer/MusicMargin/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MenuPanel/TabContainer/Audio/VBoxContainer/MusicMargin/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="MusicSlider" type="HSlider" parent="MenuPanel/TabContainer/Audio/VBoxContainer/MusicMargin/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -80.0
max_value = 0.0

[node name="EffectsMargin" type="MarginContainer" parent="MenuPanel/TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel/TabContainer/Audio/VBoxContainer/EffectsMargin"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuPanel/TabContainer/Audio/VBoxContainer/EffectsMargin/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Effects Volume"

[node name="HBoxContainer2" type="HBoxContainer" parent="MenuPanel/TabContainer/Audio/VBoxContainer/EffectsMargin/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MenuPanel/TabContainer/Audio/VBoxContainer/EffectsMargin/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="EffectsSlider" type="HSlider" parent="MenuPanel/TabContainer/Audio/VBoxContainer/EffectsMargin/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -80.0
max_value = 0.0

[node name="MarginContainer" type="MarginContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -31.0
offset_bottom = 46.0
grow_horizontal = 0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 2

[node name="ExitButton" type="Button" parent="MenuPanel/MarginContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "X"

[connection signal="item_selected" from="MenuPanel/TabContainer/Display/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/DisplayModeOption" to="MenuPanel/TabContainer/Display" method="_on_display_mode_option_item_selected"]
[connection signal="item_selected" from="MenuPanel/TabContainer/Display/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/ResolutionOption" to="MenuPanel/TabContainer/Display" method="_on_resolution_option_item_selected"]
[connection signal="item_selected" from="MenuPanel/TabContainer/Display/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer3/VsincOption" to="MenuPanel/TabContainer/Display" method="_on_vsinc_option_item_selected"]
[connection signal="pressed" from="MenuPanel/TabContainer/Display/KeepChangesPanel/KeepChanges" to="MenuPanel/TabContainer/Display" method="_on_keep_changes_pressed"]
[connection signal="value_changed" from="MenuPanel/TabContainer/Audio/VBoxContainer/MasterMargin/VBoxContainer/HBoxContainer2/MasterSlider" to="MenuPanel/TabContainer/Audio" method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="MenuPanel/TabContainer/Audio/VBoxContainer/MusicMargin/VBoxContainer/HBoxContainer2/MusicSlider" to="MenuPanel/TabContainer/Audio" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MenuPanel/TabContainer/Audio/VBoxContainer/EffectsMargin/VBoxContainer/HBoxContainer2/EffectsSlider" to="MenuPanel/TabContainer/Audio" method="_on_effects_slider_value_changed"]
[connection signal="pressed" from="MenuPanel/MarginContainer/ExitButton" to="." method="_on_exit_button_pressed"]
